--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -30,6 +30,9 @@
       </main>
 
     </div> <!-- /container -->
+    <script>
+      window.userId = "<%= @conn.params["name"] %>"
+    </script>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
