--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -31,7 +31,7 @@
 
     </div> <!-- /container -->
     <script>
-      window.userId = "<%= @conn.params["name"] %>"
+      window.userId = "<%= @conn.assigns.user_id %>"
     </script>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
